# video-event-classification-tool

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
data/: boxes.json  classification.json
data/ACRHIVE/: classification.json  classification_not_alls.json
data/samples/: sample_classification.json
data/video_id=2726526327/: classification(17).json  classification(3).json  classification(9).json  classification.json  ground_truth(4).json  ground_truth.json  ground_truth_old.json  rec_corrected.parquet  rec_stable.parquet  sample_001_enriched.json
public/wasm/: README.txt  tec_engine.js
scripts/: crop_normalized_parquet_clip.py  mass_classify.ts
src/: App.tsx  app.css
src/__tests__/: config_parse.test.ts  dedupe.test.ts  exportService.test.ts  forwardReconstruction.test.ts  frameReconstruction.test.ts  matching.test.ts  predicates.test.ts
src/context/: ProjectContext.tsx
src/data/: builtinSample.ts  ocrLayout.json
src/domain/: eventDedupe.ts  eventEngine.ts  forwardReconstruction.ts  frameReconstruction.ts  geometry.ts  predicateEval.ts  sparseIndex.ts  timelineReconcile.ts  timelineWindow.ts  types.ts
src/evaluation/: matching.ts  metrics.ts
src/schemas/: classification.ts  events.ts  fieldPath.ts  index.ts  labels.ts  pages.ts  predicates.ts  zones.ts
src/services/: engineBridge.ts  exportService.ts  parquetColumnInfer.ts  parquetExport.ts  parquetIngest.ts
src/store/: projectReducer.ts
src/ui/: EventBuilderEditor.tsx  InfoPanel.tsx  Visualizer.tsx  (+2 more)
wasm/: CMakeLists.txt  bindings.cpp
